staging/src/k8s.io/api/testdata/v1.26.0/admissionregistration.k8s.io.v1alpha1.ValidatingAdmissionPolicy.after_roundtrip.json
{
  "kind": "ValidatingAdmissionPolicy",
  "apiVersion": "admissionregistration.k8s.io/v1alpha1",
  "metadata": {
    "name": "nameValue",
    "generateName": "generateNameValue",
    "namespace": "namespaceValue",
    "selfLink": "selfLinkValue",
    "uid": "uidValue",
    "resourceVersion": "resourceVersionValue",
    "generation": 7,
    "creationTimestamp": "2008-01-01T01:01:01Z",
    "deletionTimestamp": "2009-01-01T01:01:01Z",
    "deletionGracePeriodSeconds": 10,
    "labels": {
      "labelsKey": "labelsValue"
    },
    "annotations": {
      "annotationsKey": "annotationsValue"
    },
    "ownerReferences": [
      {
        "apiVersion": "apiVersionValue",
        "kind": "kindValue",
        "name": "nameValue",
        "uid": "uidValue",
        "controller": true,
        "blockOwnerDeletion": true
      }
    ],
    "finalizers": [
      "finalizersValue"
    ],
    "managedFields": [
      {
        "manager": "managerValue",
        "operation": "operationValue",
        "apiVersion": "apiVersionValue",
        "time": "2004-01-01T01:01:01Z",
        "fieldsType": "fieldsTypeValue",
        "fieldsV1": {},
        "subresource": "subresourceValue"
      }
    ]
  },
  "spec": {
    "paramKind": {
      "apiVersion": "apiVersionValue",
      "kind": "kindValue"
    },
    "matchConstraints": {
      "namespaceSelector": {
        "matchLabels": {
          "matchLabelsKey": "matchLabelsValue"
        },
        "matchExpressions": [
          {
            "key": "keyValue",
            "operator": "operatorValue",
            "values": [
              "valuesValue"
            ]
          }
        ]
      },
      "objectSelector": {
        "matchLabels": {
          "matchLabelsKey": "matchLabelsValue"
        },
        "matchExpressions": [
          {
            "key": "keyValue",
            "operator": "operatorValue",
            "values": [
              "valuesValue"
            ]
          }
        ]
      },
      "resourceRules": [
        {
          "resourceNames": [
            "resourceNamesValue"
          ],
          "operations": [
            "operationsValue"
          ],
          "apiGroups": [
            "apiGroupsValue"
          ],
          "apiVersions": [
            "apiVersionsValue"
          ],
          "resources": [
            "resourcesValue"
          ],
          "scope": "scopeValue"
        }
      ],
      "excludeResourceRules": [
        {
          "resourceNames": [
            "resourceNamesValue"
          ],
          "operations": [
            "operationsValue"
          ],
          "apiGroups": [
            "apiGroupsValue"
          ],
          "apiVersions": [
            "apiVersionsValue"
          ],
          "resources": [
            "resourcesValue"
          ],
          "scope": "scopeValue"
        }
      ],
      "matchPolicy": "matchPolicyValue"
    },
    "validations": [
      {
        "expression": "expressionValue",
        "message": "messageValue",
        "reason": "reasonValue"
      }
    ],
    "failurePolicy": "failurePolicyValue",
    "matchConditions": null
  },
  "status": {}
}
